Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.14.0-beta1
-
Fix Version/s: Qt Creator 4.14.0-beta1
-
Component/s: Project & Build Management
-
Labels:None
-
Environment:Ubuntu 20.04 LTS 64 bit
gcc 9.3.0
-
Commits:045881089f10b45715f9a9eb752a805670c649a1 (qt-creator/qt-creator/4.14)
Description
- On the command line, build a project with passing a define to qmake, e.g.:
qmake CONFIG+=GABBAGABBAHEY ~/dev/src/creator-4.14-enterprise/qtcreator/tests/manual/debugger/gui/gui.pro make
- Open the project you just built in Qt Creator.
- On the "Configure Project" page, use the "Import Build From..." widget to select the build from step 1.
- Click "Import".
- Click "Configure Project".
Creator crashes:1 QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData>>::operator-> qscopedpointer.h 118 0x7f57e14d4b26 2 qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData>>> qglobal.h 1135 0x7f57e14d4af5 3 QLineEdit::d_func qlineedit.h 254 0x7f57e16618d2 4 QLineEdit::setText qlineedit.cpp 317 0x7f57e16ac786 5 QmakeProjectManager::QMakeStep::userArgumentsChanged qmakestep.cpp 617 0x7f57bbe66170 6 QmakeProjectManager::QMakeStep::setUserArguments qmakestep.cpp 373 0x7f57bbe63666 7 QmakeProjectManager::QmakeBuildConfiguration::<lambda(const ProjectExplorer::BuildInfo&)>::operator()(const ProjectExplorer::BuildInfo &) const qmakebuildconfiguration.cpp 144 0x7f57bbe75fcf 8 std::_Function_handler<void(const ProjectExplorer::BuildInfo&), QmakeProjectManager::QmakeBuildConfiguration::QmakeBuildConfiguration(ProjectExplorer::Target *, Utils::Id)::<lambda(const ProjectExplorer::BuildInfo&)>>::_M_invoke(const std::_Any_data &, const ProjectExplorer::BuildInfo &) std_function.h 300 0x7f57bbe7cd21 9 std::function<void (ProjectExplorer::BuildInfo const&)>::operator()(ProjectExplorer::BuildInfo const&) const std_function.h 688 0x7f57c93a0907 10 ProjectExplorer::BuildConfiguration::doInitialize buildconfiguration.cpp 276 0x7f57c939a3a3 11 ProjectExplorer::BuildConfigurationFactory::create buildconfiguration.cpp 711 0x7f57c939ce22 12 ProjectExplorer::Project::setup project.cpp 984 0x7f57c93792f7 13 ProjectExplorer::TargetSetupPage::setupProject targetsetuppage.cpp 660 0x7f57c9290654 14 ProjectExplorer::Internal::TargetSetupPageWrapper::done targetsettingspanel.cpp 114 0x7f57c9326947 15 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (ProjectExplorer::Internal::TargetSetupPageWrapper:: *)()>::call(void (ProjectExplorer::Internal::TargetSetupPageWrapper:: *)(), ProjectExplorer::Internal::TargetSetupPageWrapper *, void * *) qobjectdefs_impl.h 152 0x7f57c932c84b 16 QtPrivate::FunctionPointer<void (ProjectExplorer::Internal::TargetSetupPageWrapper:: *)()>::call<QtPrivate::List<>, void>(void (ProjectExplorer::Internal::TargetSetupPageWrapper:: *)(), ProjectExplorer::Internal::TargetSetupPageWrapper *, void * *) qobjectdefs_impl.h 185 0x7f57c932bfcd 17 QtPrivate::QSlotObject<void (ProjectExplorer::Internal::TargetSetupPageWrapper:: *)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobjectdefs_impl.h 418 0x7f57c932b6ff 18 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 398 0x7f57e02d849f 19 doActivate<false> qobject.cpp 3886 0x7f57e031d584 20 QMetaObject::activate qobject.cpp 3946 0x7f57e0316649 ... <Mehr>