QmakeProject: Don't crash on project import

Amends fc1fc6a07af58f.

Fixes: QTCREATORBUG-24802
Change-Id: I62e7e0bab82ae1b025c053785b77586aa78bcd1f
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>